[package]
name    = "single-ion"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "single-ion"
path = "src/main.rs"

[[bin]]
name             = "single-ion-app"
path             = "src/app.rs"
required-features = ["desktop-app"]

# ── Features ──────────────────────────────────────────────────────────────────
[features]
default      = []
dev          = ["ion/dev"]
desktop-app  = ["dep:wry", "dep:tao"]

# ── Service libraries ──────────────────────────────────────────────────────────
[dependencies]
db_server  = { path = "../reactive/crates/db_server" }
db_configs = { path = "../reactive/crates/db_configs" }
ion        = { path = "../ion/crates/ion" }
ion-config = { path = "../ion/crates/config" }
gluon      = { path = "../gluon/crates/gluon" }
neutrino   = { path = "../neutrino/crates/neutrino" }

# ── Runtime / logging ─────────────────────────────────────────────────────────
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Desktop app (WebView shell) — only pulled in with --features desktop-app ──
# Windows: WebView2, Linux: WebKitGTK, macOS: WKWebView
wry = { version = "0.46", optional = true }
tao = { version = "0.30", optional = true }

# ── Unix single-instance guard (flock) ───────────────────────────────────────
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# ── Build-time icon embedding (PNG → ICO → exe resource) ─────────────────────
[build-dependencies]
winresource = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
ico   = "0.3"
